# paft

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  publish-remaining.yml  publish.yml
paft/: Cargo.toml  README.md
paft-aggregates/: Cargo.toml  README.md
paft-aggregates/src/: info.rs  lib.rs  reports.rs  snapshot.rs
paft-aggregates/tests/: dataframe.rs  info_roundtrip.rs  reports_roundtrip.rs  root_exports.rs  snapshot_roundtrip.rs
paft-core/: Cargo.toml  README.md
paft-core/src/: dataframe.rs  error.rs  lib.rs  serde_helpers.rs
paft-core/src/domain/: currency.rs  currency_utils.rs  exchange.rs  instrument.rs  market_state.rs  mod.rs  money.rs  period.rs  string_canonical.rs
paft-core/tests/: currency.rs  currency_utils.rs  dataframe.rs  enum_roundtrip.rs  exchange.rs  instrument.rs  macros.rs  money.rs  types.rs
paft-decimal/: Cargo.toml  README.md
paft-decimal/src/: constrained.rs  lib.rs
paft-decimal/tests/: constrained.rs  rounding.rs
paft-domain/: Cargo.toml  README.md
paft-domain/src/: error.rs  exchange.rs  horizon.rs  identifier.rs  identifiers.rs  instrument.rs  lib.rs  market_state.rs  period.rs
paft-domain/src/identifiers/: figi.rs  isin.rs  mod.rs  polymarket.rs  prediction.rs  symbol.rs
paft-domain/tests/: dataframe.rs  enum_roundtrip.rs  exchange.rs  horizon.rs  identifiers.rs  instrument.rs  instrument_isin.rs  period.rs
paft-fundamentals/: Cargo.toml  README.md
paft-fundamentals/src/: analysis.rs  error.rs  esg.rs  holders.rs  lib.rs  profile.rs  statements.rs  statistics.rs
paft-fundamentals/tests/: analysis_helpers.rs  calendar.rs  dataframe.rs  diag_overflow.rs  enum_roundtrip.rs  enums.rs  profile_holders.rs  statistics.rs
paft-market/: Cargo.toml  README.md
paft-market/src/: error.rs  lib.rs
paft-market/src/market/: action.rs  mod.rs  news.rs  options.rs  orderbook.rs  quote.rs
paft-market/src/requests/: history.rs  mod.rs  news.rs  options.rs  search.rs
paft-market/src/responses/: download.rs  history.rs  mod.rs  options.rs  search.rs
paft-market/tests/: common.rs  dataframe.rs  intervals.rs  options_req_resp.rs  orderbook.rs  quote.rs  requests.rs  responses.rs  root_exports.rs  validation.rs
paft-money/: Cargo.toml  README.md
paft-money/src/: amount.rs  currency.rs  currency_utils.rs  decimal.rs  error.rs  exact.rs  format.rs  lib.rs  locale.rs  money.rs  parser.rs  price.rs  quantity.rs
paft-money/tests/: amount.rs  behaviour.rs  currency.rs  currency_utils.rs  dataframe.rs  money.rs  money_formatting.rs  parse.rs  rounding.rs
paft-polymarket/: Cargo.toml
paft-polymarket/src/: lib.rs
paft-prediction/: Cargo.toml  README.md
paft-prediction/src/: error.rs  identifiers.rs  instrument.rs  lib.rs  market.rs  market_data.rs  price.rs
paft-prediction/tests/: dataframe.rs  identifiers.rs  instrument.rs  market.rs  market_data.rs  open_enums.rs  price.rs
paft-utils/: Cargo.toml  README.md
paft-utils/src/: dataframe.rs  lib.rs  string_canonical.rs
paft-utils/tests/: decimal128.rs  string_canonical.rs
paft/docs/: BEST_PRACTICES.md  EXTENSIBLE_ENUMS.md  README.md
paft/examples/: extensible_enums.rs  hierarchical_identifiers.rs  metadata_dataframe.rs  nested_metadata_propagation.rs  provider_metadata.rs  v09_ergonomics.rs
paft/src/: error.rs  lib.rs  prelude.rs
paft/tests/: dataframe_facade.rs  encapsulation.rs  facade_exports.rs  integration.rs  mod.rs  money_facade.rs
