[workspace]
resolver = "2"
members = [
    "paft",
    "paft-core",
    "paft-market",
    "paft-fundamentals",
    "paft-utils",
    "paft-money",
    "paft-domain",
    "paft-aggregates",
]

[workspace.package]
version = "0.5.0"
authors = ["G. Ramistella <heydays_micron_7m@icloud.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/paft-rs/paft"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
polars = { version = "0.51", default-features = false }
thiserror = "2.0.17"
df-derive = { version = "0.1.1" }
quote = "1.0.41"
serde_json = "1.0.145"
regex = "1.12.2"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
rust_decimal = { version = "1.39", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
iso_currency = "0.5"
bitflags = { version = "2", features = ["serde"] }

# Local crates
paft-core = { path = "paft-core", version = "0.5.0", default-features = false }
paft-market = { path = "paft-market", version = "0.5.0", default-features = false }
paft-fundamentals = { path = "paft-fundamentals", version = "0.5.0", default-features = false }
paft-money = { path = "paft-money", version = "0.5.0", default-features = false}
paft-utils = { path = "paft-utils", version = "0.5.0", default-features = false }
paft-domain = { path = "paft-domain", version = "0.5.0", default-features = false }
paft-aggregates = { path = "paft-aggregates", version = "0.5.0", default-features = false }
