[workspace]
resolver = "2"
members = [
    "paft",
    "paft-decimal",
    "paft-core",
    "paft-market",
    "paft-fundamentals",
    "paft-utils",
    "paft-money",
    "paft-domain",
    "paft-aggregates",
    "paft-prediction"
]

[workspace.package]
version = "0.8.0"
authors = ["G. Ramistella <heydays_micron_7m@icloud.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/paft-rs/paft"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
polars = { version = "0.53", default-features = false }
polars-arrow = { version = "0.53", default-features = false }
thiserror = "2.0.18"
df-derive = { git = "https://github.com/gramistella/df-derive.git" }
quote = "1.0.45"
serde_json = "1.0.149"
regex = "1.12.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
rust_decimal = { version = "1.41", features = ["serde"] }
bigdecimal = { version = "0.4.10", features = ["serde"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
iso_currency = "0.5.3"
bitflags = { version = "2.11.1", features = ["serde"] }
isin = { version = "0.1.19", default-features = false }
tracing = { version = "0.1.44", features = ["attributes"] }
smol_str = "0.3.6"

# Local crates
paft-core = { path = "paft-core", version = "0.8.0", default-features = false }
paft-market = { path = "paft-market", version = "0.8.0", default-features = false }
paft-fundamentals = { path = "paft-fundamentals", version = "0.8.0", default-features = false }
paft-money = { path = "paft-money", version = "0.8.0", default-features = false}
paft-utils = { path = "paft-utils", version = "0.8.0", default-features = false }
paft-domain = { path = "paft-domain", version = "0.8.0", default-features = false }
paft-aggregates = { path = "paft-aggregates", version = "0.8.0", default-features = false }
paft-prediction = { path = "paft-prediction", version = "0.8.0", default-features = false }
paft-decimal = { path = "paft-decimal", version = "0.8.0", default-features = false }