[workspace]
resolver = "2"
members = [
    "paft",
    "paft-decimal",
    "paft-core",
    "paft-market",
    "paft-fundamentals",
    "paft-utils",
    "paft-money",
    "paft-domain",
    "paft-aggregates",
    "paft-prediction"
]

[workspace.package]
version = "0.8.0"
authors = ["G. Ramistella <heydays_micron_7m@icloud.com>"]
edition = "2024"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/paft-rs/paft"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
polars = { version = "0.53", default-features = false }
polars-arrow = { version = "0.53", default-features = false }
thiserror = "2.0"
df-derive-core = { version = "0.3.0", default-features = false }
df-derive-macros = "0.3.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
rust_decimal = { version = "1.42", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
iso_currency = "0.5"
bitflags = { version = "2.11", features = ["serde"] }
isin = { version = "0.1", default-features = false }
tracing = { version = "0.1", features = ["attributes"] }
smol_str = "0.3"

# Local crates
paft-core = { path = "paft-core", version = "0.8.0", default-features = false }
paft-market = { path = "paft-market", version = "0.8.0", default-features = false }
paft-fundamentals = { path = "paft-fundamentals", version = "0.8.0", default-features = false }
paft-money = { path = "paft-money", version = "0.8.0", default-features = false }
paft-utils = { path = "paft-utils", version = "0.8.0", default-features = false }
paft-domain = { path = "paft-domain", version = "0.8.0", default-features = false }
paft-aggregates = { path = "paft-aggregates", version = "0.8.0", default-features = false }
paft-prediction = { path = "paft-prediction", version = "0.8.0", default-features = false }
paft-decimal = { path = "paft-decimal", version = "0.8.0", default-features = false }
