[package]
name = "paft-aggregates"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Aggregated info snapshots built on paft primitives."
repository.workspace = true
readme = "README.md"
keywords = ["finance", "market", "aggregates", "serde"]
categories = ["data-structures", "finance"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
paft-domain = { workspace = true }
paft-money  = { workspace = true }
paft-market = { workspace = true }
paft-utils = { workspace = true, optional = true }
polars = { workspace = true, optional = true }
df-derive = { workspace = true, optional = true }

[features]
default = []

# rust-decimal feature removed; rust_decimal backend is implied by default
bigdecimal = [
  "paft-money/bigdecimal",
  "paft-market/bigdecimal",
]

# Optional: expose panicking money ops for tests/consumers
panicking-money-ops = ["paft-money/panicking-money-ops"]

# Placeholder for facade forwarding; this crate has no dataframe code
dataframe = [
  "polars",
  "df-derive",
  "paft-domain/dataframe",
  "paft-market/dataframe",
  "paft-money/dataframe",
  "paft-utils/dataframe",
  "paft-utils",
]

[dev-dependencies]
serde_json = { workspace = true }
iso_currency = { workspace = true }
