[package]
name = "paft-aggregates"
version.workspace = true
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Aggregated info snapshots built on paft primitives."
repository.workspace = true
readme = "README.md"
keywords = ["finance", "market", "aggregates", "serde"]
categories = ["data-structures", "finance"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
paft-domain = { workspace = true }
paft-money  = { workspace = true }
paft-market = { workspace = true }
paft-fundamentals = { workspace = true }
paft-decimal = { workspace = true, default-features = false }
paft-utils = { workspace = true, optional = true }
polars = { workspace = true, optional = true }
df-derive-macros = { workspace = true, optional = true }

[features]
default = []

# No feature flag is needed for the default rust_decimal backend.
bigdecimal = [
  "paft-money/bigdecimal",
  "paft-market/bigdecimal",
  "paft-decimal/bigdecimal",
  "paft-utils?/bigdecimal",
]

# Optional: expose panicking money ops for tests/consumers
panicking-money-ops = ["paft-money/panicking-money-ops"]

# Forwards the dataframe feature; `Snapshot` derives `ToDataFrame`.
dataframe = [
  "polars",
  "polars/fmt",
  "df-derive-macros",
  "paft-domain/dataframe",
  "paft-market/dataframe",
  "paft-fundamentals/dataframe",
  "paft-money/dataframe",
  "paft-utils/dataframe",
  "paft-utils",
]

[dev-dependencies]
paft-decimal = { workspace = true, default-features = false }
serde_json = { workspace = true }
iso_currency = { workspace = true }
pretty_assertions = "1.4"
