[package]
name = "paft-core"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Core domain types, errors, and shared utilities for paft."
repository.workspace = true
homepage = "https://github.com/paft-rs/paft"
documentation = "https://docs.rs/paft-core"
readme = "../README.md"
keywords = ["finance", "market-data", "dataframe", "serde", "polars"]
categories = ["data-structures", "finance"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
rust_decimal = { workspace = true }
strum = { workspace = true }
df-derive = { workspace = true, optional = true }
polars = { workspace = true, features = ["lazy", "strings", "temporal", "serde", "regex", "timezones", "diagonal_concat", "json", "rolling_window", "dtype-decimal"], optional = true }

[features]
default = []
dataframe = ["polars", "df-derive"]
panicking-money-ops = []

[dev-dependencies]
serde_json = { workspace = true }

