[package]
name = "paft-core"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Core domain types, errors, and shared utilities for paft."
repository.workspace = true
homepage = "https://github.com/paft-rs/paft"
documentation = "https://docs.rs/paft-core"
readme = "README.md"
keywords = ["finance", "market-data", "dataframe", "serde", "polars"]
categories = ["data-structures", "finance"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
paft-utils = { workspace = true }

[features]
default = []
dataframe = ["paft-utils/dataframe"]

[dev-dependencies]
serde_json = { workspace = true }
iso_currency = { workspace = true }
