[package]
name = "paft-domain"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain modeling primitives (instrument, exchange, period, market state) for the paft ecosystem."
readme = "../README.md"
keywords = ["finance", "market-data", "types", "serde", "instruments"]
categories = ["finance", "data-structures"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
paft-utils = { workspace = true }
paft-money = { workspace = true, default-features = false }
paft-core = { workspace = true }
isin = { version = "0.1", optional = true, default-features = false }

[features]
default = ["rust-decimal"]

rust-decimal = ["paft-money/rust-decimal"]
bigdecimal = ["paft-money/bigdecimal"]

dataframe = ["paft-utils/dataframe", "paft-money/dataframe"]
isin-validate = ["dep:isin"]
figi-validate = []
ident-validate = ["isin-validate", "figi-validate"]

[dev-dependencies]
serde_json = { workspace = true }
