[package]
name = "paft-domain"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain modeling primitives (instrument, exchange, period, market state) for the paft ecosystem."
readme = "README.md"
keywords = ["finance", "market-data", "types", "serde", "instruments"]
categories = ["finance", "data-structures"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
paft-utils = { workspace = true }
polars = { workspace = true, optional = true }
df-derive = { workspace = true, optional = true }
paft-core = { workspace = true }
isin = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
default = []

tracing = ["dep:tracing"]

dataframe = ["polars", "df-derive", "paft-utils/dataframe"]

[dev-dependencies]
serde_json = { workspace = true }
paft-money = { workspace = true }
