[package]
name = "paft-fundamentals"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Fundamentals data models and helpers for paft."
repository.workspace = true
homepage = "https://github.com/paft-rs/paft"
documentation = "https://docs.rs/paft-fundamentals"
readme = "../README.md"
keywords = ["finance", "fundamentals", "esg", "holders", "serde"]
categories = ["data-structures", "finance"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
paft-core = { workspace = true }
paft-domain = { workspace = true }
paft-money = { workspace = true }
paft-utils = { workspace = true }
iso_currency = { workspace = true }
polars = { workspace = true, features = ["lazy", "strings", "temporal", "serde", "regex", "timezones", "diagonal_concat", "json", "rolling_window"], optional = true }
df-derive = { workspace = true, optional = true }

[features]
default = []
dataframe = ["polars", "df-derive", "paft-utils/dataframe", "paft-core/dataframe", "paft-domain/dataframe"]

[dev-dependencies]
serde_json = { workspace = true }
rust_decimal = { workspace = true }

