[package]
name = "paft-fundamentals"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Fundamentals data models and helpers for paft."
repository.workspace = true
homepage = "https://github.com/paft-rs/paft"
documentation = "https://docs.rs/paft-fundamentals"
readme = "README.md"
keywords = ["finance", "fundamentals", "esg", "holders", "serde"]
categories = ["data-structures", "finance"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
chrono = { workspace = true }
paft-core = { workspace = true }
paft-domain = { workspace = true }
paft-money = { workspace = true, default-features = false }
paft-utils = { workspace = true }
iso_currency = { workspace = true }
polars = { workspace = true, optional = true, features = ["dtype-datetime"] }
df-derive = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []

# rust-decimal feature removed; rust_decimal backend is implied by default
bigdecimal = ["paft-money/bigdecimal"]

dataframe = ["polars", "df-derive", "paft-utils/dataframe", "paft-domain/dataframe", "paft-money/dataframe"]

tracing = ["dep:tracing"]

[dev-dependencies]
serde_json = { workspace = true }
rust_decimal = { workspace = true }
