[package]
name = "paft-fundamentals"
version.workspace = true
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Fundamentals data models and helpers for paft."
repository.workspace = true
homepage = "https://github.com/paft-rs/paft"
documentation = "https://docs.rs/paft-fundamentals"
readme = "README.md"
keywords = ["finance", "fundamentals", "esg", "holders", "serde"]
categories = ["data-structures", "finance"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
chrono = { workspace = true }
paft-core = { workspace = true }
paft-domain = { workspace = true }
paft-money = { workspace = true, default-features = false }
paft-utils = { workspace = true }
paft-decimal = { workspace = true, default-features = false }
iso_currency = { workspace = true }
polars = { workspace = true, optional = true, features = ["dtype-datetime"] }
polars-arrow = { workspace = true, optional = true }
df-derive-macros = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []

# rust-decimal feature removed; rust_decimal backend is implied by default
bigdecimal = ["paft-money/bigdecimal", "paft-decimal/bigdecimal", "paft-utils/bigdecimal"]

dataframe = ["polars", "polars/fmt", "polars-arrow", "df-derive-macros", "paft-utils/dataframe", "paft-domain/dataframe", "paft-money/dataframe"]

tracing = ["dep:tracing"]

[dev-dependencies]
paft-decimal = { workspace = true, default-features = false }
serde_json = { workspace = true }
