[package]
name = "paft-market"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Market data models and requests for paft."
repository.workspace = true
homepage = "https://github.com/paft-rs/paft"
documentation = "https://docs.rs/paft-market"
readme = "../README.md"
keywords = ["finance", "market", "quotes", "historical", "serde"]
categories = ["data-structures", "finance"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
chrono-tz = { workspace = true }
paft-core = { workspace = true, features = [] }
paft-utils = { workspace = true }
paft-money = { workspace = true }
df-derive = { workspace = true, optional = true }
polars = { workspace = true, features = ["lazy", "strings", "temporal", "serde", "regex", "timezones", "diagonal_concat", "json", "rolling_window"], optional = true }
iso_currency = { workspace = true }
bitflags = { version = "2", features = ["serde"] }
thiserror = { workspace = true }

[features]
default = []
dataframe = ["paft-utils/dataframe", "polars", "df-derive", "paft-core/dataframe"]

[dev-dependencies]
rust_decimal = { workspace = true }
serde_json = { workspace = true }
