[package]
name = "paft-market"
version.workspace = true
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Market data models and requests for paft."
repository.workspace = true
homepage = "https://github.com/paft-rs/paft"
documentation = "https://docs.rs/paft-market"
readme = "README.md"
keywords = ["finance", "market", "quotes", "historical", "serde"]
categories = ["data-structures", "finance"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
chrono-tz = { workspace = true }
paft-core = { workspace = true, features = [] }
paft-domain = { workspace = true }
paft-utils = { workspace = true }
paft-money = { workspace = true, default-features = false }
paft-decimal = { workspace = true, default-features = false }
df-derive-macros = { workspace = true, optional = true }
polars = { workspace = true, features = ["dtype-datetime","dtype-decimal"], optional = true }
iso_currency = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[features]
default = []

# rust-decimal feature removed; rust_decimal backend is implied by default
bigdecimal = ["paft-money/bigdecimal", "paft-decimal/bigdecimal", "paft-utils/bigdecimal"]

dataframe = ["paft-utils/dataframe", "polars", "polars/fmt", "df-derive-macros", "paft-domain/dataframe", "paft-money/dataframe"]

tracing = ["dep:tracing"]

[dev-dependencies]
serde_json = { workspace = true }
