[package]
name = "paft-money"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Currency and money primitives for the paft ecosystem."
repository.workspace = true
homepage = "https://github.com/paft-rs/paft"
documentation = "https://docs.rs/paft-money"
readme = "README.md"
keywords = ["finance", "currency", "money", "serde"]
categories = ["finance", "data-structures"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
iso_currency = { workspace = true }
rust_decimal = { workspace = true }
bigdecimal = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
paft-utils = { workspace = true }
df-derive = { workspace = true, optional = true }
polars = { workspace = true, features = ["dtype-decimal"], optional = true }
tracing = { workspace = true, optional = true }

[features]
bigdecimal = ["dep:bigdecimal", "dep:num-traits", "dep:num-bigint"]
dataframe = ["polars", "df-derive", "paft-utils/dataframe"]
money-formatting = []
panicking-money-ops = []

tracing = ["dep:tracing"]

[dev-dependencies]
serde_json = { workspace = true }
