[package]
name = "paft-money"
version.workspace = true
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Currency and money primitives for the paft ecosystem."
repository.workspace = true
homepage = "https://github.com/paft-rs/paft"
documentation = "https://docs.rs/paft-money"
readme = "README.md"
keywords = ["finance", "currency", "money", "serde"]
categories = ["finance", "data-structures"]

[lints]
workspace = true

[dependencies]
paft-decimal = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
iso_currency = { workspace = true }
paft-utils = { workspace = true }
df-derive = { workspace = true, optional = true }
polars = { workspace = true, features = ["dtype-decimal"], optional = true }
polars-arrow = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
bigdecimal = ["paft-decimal/bigdecimal", "paft-utils/bigdecimal"]
dataframe = ["polars", "polars/fmt", "polars-arrow", "df-derive", "paft-utils/dataframe"]
money-formatting = []
panicking-money-ops = []

tracing = ["dep:tracing"]

[dev-dependencies]
serde_json = { workspace = true }
