[package]
name = "paft-polymarket"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Polymarket.com data models and helpers for paft."
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
paft-core = { workspace = true }
paft-domain = { workspace = true }
paft-money = { workspace = true }
paft-utils = { workspace = true }