[package]
name = "paft-prediction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Prediction market data models and helpers for paft."
repository.workspace = true
readme = "README.md"
keywords = ["finance", "prediction-markets", "serde"]
categories = ["data-structures", "finance"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
chrono = { workspace = true }
paft-core = { workspace = true }
paft-domain = { workspace = true }
paft-money = { workspace = true }
paft-utils = { workspace = true }
df-derive = { workspace = true, optional = true }
polars = { workspace = true, optional = true }
polars-arrow = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []

dataframe = [
  "polars",
  "polars-arrow",
  "df-derive",
  "paft-utils/dataframe",
  "paft-domain/dataframe",
  "paft-money/dataframe",
]

bigdecimal = [
  "paft-money/bigdecimal",
  "paft-utils/bigdecimal",
]