[package]
name = "paft-prediction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Prediction market data models and helpers for paft."
repository.workspace = true
readme = "README.md"
keywords = ["finance", "prediction-markets", "serde"]
categories = ["data-structures", "finance"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
chrono = { workspace = true }
paft-money = { workspace = true }
paft-utils = { workspace = true }
df-derive-macros = { workspace = true, optional = true }
polars = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
default = []

dataframe = [
  "polars",
  "polars/fmt",
  "df-derive-macros",
  "paft-utils/dataframe",
  "paft-money/dataframe",
]

bigdecimal = [
  "paft-money/bigdecimal",
  "paft-utils/bigdecimal",
]
