[package]
name = "paft-utils"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Utility helpers shared across the paft workspace."
repository.workspace = true
readme = "../README.md"
keywords = ["finance", "data", "utils", "serde"]
categories = ["finance", "data-structures"]

[dependencies]
thiserror = { workspace = true }
polars = { workspace = true, optional = true }

[features]
default = []
dataframe = ["polars"]

