[package]
name = "paft-utils"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Utility helpers shared across the paft workspace."
repository.workspace = true
readme = "README.md"
keywords = ["finance", "data", "utils", "serde"]
categories = ["finance", "data-structures"]

[dependencies]
thiserror = { workspace = true }
smol_str = { workspace = true }
polars = { workspace = true, features = ["dtype-decimal"], optional = true }
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }

[features]
default = []
dataframe = ["dep:polars", "dep:rust_decimal"]
bigdecimal = ["dep:bigdecimal"]

