[package]
name = "paft-utils"
version.workspace = true
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Utility helpers shared across the paft workspace."
repository.workspace = true
readme = "README.md"
keywords = ["finance", "data", "utils", "serde"]
categories = ["finance", "data-structures"]

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
smol_str = { workspace = true }
df-derive-core = { workspace = true, optional = true }
polars = { workspace = true, features = ["dtype-decimal"], optional = true }
rust_decimal = { workspace = true, optional = true }
bigdecimal = { workspace = true, optional = true }
paft-decimal = { workspace = true, default-features = false, optional = true }

[features]
default = []
dataframe = ["dep:df-derive-core", "dep:polars", "dep:rust_decimal", "dep:paft-decimal", "polars/fmt"]
bigdecimal = ["dep:bigdecimal", "paft-decimal?/bigdecimal"]
