[package]
name = "paft"
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
description = "Facade crate for paft: unified public API over the paft ecosystem."
readme = "README.md"
repository.workspace = true
homepage = "https://github.com/paft-rs/paft"
documentation = "https://docs.rs/paft"
keywords = ["finance", "types", "stocks", "trading", "polars"]
categories = ["finance", "data-structures", "api-bindings"]

[dependencies]
paft-core = { workspace = true }
paft-money = { workspace = true }
paft-domain = { workspace = true, optional = true }
paft-market = { workspace = true, optional = true }
paft-fundamentals = { workspace = true, optional = true }
paft-utils = { workspace = true }
iso_currency = { workspace = true }

[features]
default = ["domain", "market", "fundamentals"]

domain = ["dep:paft-domain"]
market = ["dep:paft-market", "domain"]
fundamentals = ["dep:paft-fundamentals", "domain"]

dataframe = ["paft-utils/dataframe", "paft-money/dataframe", "paft-core/dataframe", "paft-domain?/dataframe", "paft-market?/dataframe", "paft-fundamentals?/dataframe"]
full = ["domain", "market", "fundamentals", "dataframe"]
panicking-money-ops = ["paft-core/panicking-money-ops", "paft-money/panicking-money-ops"]

[dev-dependencies]
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
rust_decimal = { workspace = true }
polars = { workspace = true, features = ["timezones"] }


